# GenPath-PPH

./: LICENSE.txt  README.md  core.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: Effect_size_KS_test_results_dimension_0_absolute_correlation.csv  Effect_size_KS_test_results_dimension_1_absolute_correlation.csv  Genes_Map_KEGG_pathways.txt  PBMC_RNASeq_PRNA739257_DESeq2_results_symbol.csv  betti_numbers_absolute_correlation_dict.pkl  hsa04216.xml  kegg_pathways_info_clean_data_symbol.csv  persistent_pairs_dict.pkl  priority_list.pkl  ranked_genes_lfc.rnk  select_kegg_adj_matrices.pkl  select_kegg_pathways_expressions.pkl
examples/: ferroptosis.py  p53_signaling.py
genpath_pph/: __init__.py  _init_.py  api.py  core.py  run_analysis.py  trace.py  utils.py
notebooks/: genpath_pph_global.ipynb  genpath_pph_pathway_level.ipynb  toy_example_ph_vs_pph.ipynb
